--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,344 @@
-/* место для вашего кода */
+/* Блок header */
+
+.header{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+  padding: 93px 24px 92px 24px;
+}
+
+.header__links-list{
+  display: flex;
+  align-items: center;
+  list-style: circle;
+  gap: 10px 35px;
+  padding-left: 27px;
+    
+}
+
+.header__links{
+  font-size: 18px;
+  font-weight: 400;
+  white-space: nowrap;
+  text-underline-offset: 4px;
+}
+
+.header__link_active{
+  text-decoration: none;
+}
+
+.header__links-list-item_no-bullit{
+  list-style-type: none;
+}
+
+.header__logo {
+  display: block;
+  justify-self: center;
+  margin-right: 100px;
+}
+
+.header__logo-image{
+  width: 148px;
+  height: 105px;
+}
+
+.address {
+  font-weight: 400;
+  font-size: 18px;
+  font-style: normal;
+  line-height: 24px;
+  max-width: 243px;
+  text-underline-offset: 4px;
+  margin-left: 50px;
+  
+}
+
+
+/* Блок cover */
+
+
+.cover{
+  position: relative;
+  z-index: 1;
+  padding: 176px 50px 50px 50px;
+  background-image: url("../images/cover.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  color: #fff;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+}
+
+.cover__title {
+  display: flex;
+  flex-direction: column;
+  row-gap: 30px;
+  margin-bottom: 135px;
+  font-weight: 700;
+  font-size: 100px;
+  line-height: 95%;
+  letter-spacing: 0.3em;
+  text-transform: uppercase;
+}
+
+.aligned-text,
+.aligned-text_center,
+.aligned-text_right {
+  display: block;
+}
+
+.aligned-text {
+  text-align: left;
+}
+  
+.aligned-text_center {
+  text-align: center;
+}
+  
+.aligned-text_right {
+  text-align: right;
+}
+
+.letter-spacing-extended {
+  letter-spacing: 0.6em;
+}
+  
+.letter-spacing-normal {
+  letter-spacing: 0.3em;
+}
+
+.no-letter-spacing {
+  letter-spacing: 0;
+}
+
+.cover__description {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.cover__description-text {
+  margin-right: 80px;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 28px;
+  text-align: center;
+  text-transform: uppercase;
+  word-spacing: 18px;
+}
+
+.bet-button {
+  color: inherit;
+  border: 1px solid #fff;
+  padding:12px 31px 11px 32px;
+  font-family: "Raleway", sans-serif;
+  font-weight: 400;
+  font-size: 22px;
+  text-align: center;
+  text-transform: uppercase;
+  background: transparent;
+}
+
+
+/* Блок lots */
+
+
+.lots{
+  padding: 179px 24px 50px 24px;
+}
+
+.lots__heading{
+  font-weight: 700;
+  font-size: 40px;
+  text-transform: uppercase;
+  margin-bottom: 27px;
+  margin-left: 40px;
+  line-height: normal;
+}
+
+.lots__card-list {
+  display: flex;
+  flex-wrap: nowrap;
+  list-style: none;
+  gap: 25px;
+  width: 100%;
+  margin-bottom: 30px;
+}
+
+.lots__card-list-item {
+  flex: 1 1 430px;
+  height: 563px;
+}
+
+.card-link {
+  display: block;
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
+}
+
+.card{
+  position: relative;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  padding: 50px 40px;
+  color: #fff;
+}
+
+.card_type_film{
+  background-image: url(../images/card-lot-01.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.card_type_book{
+  background-image: url(../images/card-lot-02.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.card_type_picture{
+  background-image: url(../images/card-lot-03.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.card__title{
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 120%;
+  text-transform: uppercase;
+  line-height: normal;
+  text-decoration: underline;
+  text-underline-offset: 3px;
+  margin-top: 2px;
+}
+
+.card__text{
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 120%;
+  margin-top: auto;
+}
+
+.lots__look-more-link{
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 23px;
+  margin-left: 40px;
+  text-underline-offset: 5px;
+}
+
+
+/* Блок about */
+
+
+.about{
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  gap: 72px;
+  padding: 132px 17px 0 71px;
+}
+
+.about__logo{
+  display: flex;
+  background-color: #000;
+  width: 240px;
+  height: 240px;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+}
+
+.about__logo-image{
+  width: 150px;
+  height: 180px;
+}
+
+.about__column{
+  display: flex;
+  flex-direction: column;
+  padding-top: 102px;
+}
+
+.about__title{
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 47px;
+  text-transform: uppercase;
+  margin-bottom: 100px;
+}
+
+.about__text{
+  display: flex;
+  flex-direction: column;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  gap: 25px;
+  letter-spacing: 0.007em;
+}
+
+/* Блок footer */
+
+.footer{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+  padding-top: 180px;
+}
+
+.footer__menu{
+  display: flex;
+  align-items: center;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21px;
+  padding: 0 0 35px 110px;
+}
+
+.footer__menu-list{
+  text-align: center;
+  list-style-type: none;
+}
+
+.footer__menu-link{
+  text-decoration: underline;
+  text-underline-offset: 4px;
+}
+
+.footer__social-list{
+  display: flex;  
+  align-items: start;
+  justify-content: space-around;
+  padding: 0 25px 48px 51px;
+}
+
+.footer__social-list-item{
+  list-style-type: none;
+}
+
+.footer__menu-link_active{
+  text-decoration: none;
+}
+
+.footer__social-icon{
+  display: block;
+  width: 48px;
+  height: 48px;
+}
