--- a/styles/style.css
+++ b/styles/style.css
@@ -12,9 +12,9 @@
   display: flex;
   align-items: center;
   list-style: circle;
-  gap: 10px 35px;
+  gap: 0px 29px;
   padding-left: 27px;
-    
+  word-spacing: 5px;
 }
 
 .header__links {
@@ -36,6 +36,10 @@
   display: block;
   justify-self: center;
   margin-right: 100px;
+}
+
+.header__logo:hover {
+  transform: scale(1.03);
 }
 
 .header__logo-image {
@@ -149,6 +153,9 @@
   background: transparent;
 }
 
+.bet-button:hover {
+  transform: scale(1.1);
+}
 
 /* Блок lots */
 
@@ -168,7 +175,7 @@
 
 .lots__card-list {
   display: flex;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   list-style: none;
   gap: 25px;
   width: 100%;
@@ -176,7 +183,7 @@
 }
 
 .lots__card-list-item {
-  flex: 1 1 430px;
+  flex: 0 0 334px;
   height: 563px;
 }
 
@@ -192,31 +199,29 @@
   z-index: 1;
   display: flex;
   flex-direction: column;
-  width: 100%;
+  max-width: 334px;
   height: 100%;
   padding: 50px 40px;
   color: #fff;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.card:hover {
+  transform: scale(1.03);
 }
 
 .card_type_film {
   background-image: url(../images/card-lot-01.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
 }
 
 .card_type_book {
   background-image: url(../images/card-lot-02.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
 }
 
 .card_type_picture {
   background-image: url(../images/card-lot-03.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
 }
 
 .card__title {
@@ -302,6 +307,7 @@
   grid-template-columns: repeat(3, 1fr);
   align-items: center;
   padding-top: 180px;
+  margin-bottom: 88px;
 }
 
 .footer__menu {
@@ -318,13 +324,13 @@
   list-style-type: none;
 }
 
-.footer__menu-link_active {
-  text-decoration: none;
-}
-
 .footer__menu-link {
   text-decoration: underline;
   text-underline-offset: 4px;
+}
+
+.footer__menu-link_active {
+    text-decoration: none;
 }
 
 .footer__social-list {
@@ -342,4 +348,8 @@
   display: block;
   width: 48px;
   height: 48px;
+}
+
+.footer__social-icon:hover {
+  transform: scale(1.1);
 }
